# SIROCCO2

./: .gitignore  .travis.yml  Makefile.am  README.md  ZVK.py  configure.ac  libsirocco.pc.in  sage-sirocco_interface.pyx
include/: icomplex.hpp  interval.hpp  list.hpp  mp_complex.hpp  mp_icomplex.hpp  mp_interval.hpp  polynomial.hpp  sirocco.h  sirocco.hpp
lib/: Makefile.am  icomplex.cpp  interval.cpp  mp_complex.cpp  mp_icomplex.cpp  mp_interval.cpp  polynomial.cpp  sirocco.cpp
tests/: Makefile.am  sirocco_minimal_test.cpp  sirocco_test.cpp
